saves/test/demo_full_20240802_193545/circuit8/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp circuit8_tb.v circuit8.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
circuit8_tb.v:235: $finish called at 1470000 (1ps)

iverilog cmd 2 error:

